# syex

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: dockerpublish.yml
