[tool.poetry]
name = "syex"
version = "0.1.0"
description = "Synology exported for prometheus"
authors = ["Erik Lilja <erikvlilja@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
prometheus_client = "^0.7.1"
synologydsm-api = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
